--- a/Woong_Android/app/src/main/res/layout/item_payment_myproduct.xml
+++ b/Woong_Android/app/src/main/res/layout/item_payment_myproduct.xml
@@ -177,7 +177,7 @@
                     android:gravity="end"
                     android:text="총 금액"
                     android:fontFamily="@font/nanum_bold"
-                    android:textSize="13dsp"
+                    android:textSize="13sp"
                     android:layout_marginRight="15dp"/>
 
         </RelativeLayout>
