--- a/Woong_Android/app/src/main/res/layout/item_photo_review.xml
+++ b/Woong_Android/app/src/main/res/layout/item_photo_review.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="112dp"
     android:layout_height="98dp"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:layout_marginRight="15dp">
 
         <RelativeLayout
             android:layout_centerInParent="true"
